# mod-release-workflow

./: .pre-commit-config.yaml  README.md  caller-template.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yaml  mod-release.yaml
scripts/: lint.sh  mods_toml.py  sync_mod.py
